--- a/Spectrophotometry.Rmd
+++ b/Spectrophotometry.Rmd
@@ -38,10 +38,10 @@ paste0("r2 = ", round(r2,3))
 
 ### Plant extract concentrations
 
-Find concentrations of plant extract. By looking at the equation of our standard curve, we know the concentrations of BSA and their absorbance. Our goal is to find the concentrations of our plant extract (x values in the equation), based on the absorbance rates we measured (y values).
+Find concentrations of proteins in plant extract. By looking at the equation of our standard curve, we know the concentrations of BSA and their absorbance. Our goal is to find the concentrations of our plant extract (x values in the equation), based on the absorbance we measured (y values).
 Therefore, in the equation:  
 _y = 0.33 + 0.0179 * x_,  
-the known is _y_, and we want to solve for the unknown _x_ (concentration of plant extract):  
+the known is _y_, and we want to solve for the unknown _x_ (concentration of protein plant extract):  
 _x = (y - 0.33)/0.0179_
 ```{r}
 extract$p_concentration=(extract$p_absorption-curve[[1]][1])/curve[[1]][2]
@@ -49,10 +49,10 @@ extract
 ```
 
 
-Convert dilutions of our samples back to the true values.
+Convert dilutions of our samples back to the true concentration value.
 We know that we diluted sample **1/10** ten times, **1/50** fifty, and so on. To find the concentration of the original extract (the one we tested today, and saved for next time), we need to multiply each calculated concentration by the respective dilution factor (10, 50, 100).  
 The variability in the numbers found is a measurement error, and we can take a mean, and sd to quantify it.
-Note: at this step we exclude plant samples with the ratio of 1/10 as they values were too high to be used with our standard curve. 
+Note: at this step we exclude plant samples with the ratio of 1/10 as their values were too high to be used with our standard curve. 
 ```{r}
 sample=extract$p_concentration[3:6]*c(50,50,100,100)
 sample
